refactor(yazi): move bookmarks paths

--- a/config/yazi/keymap.toml
+++ b/config/yazi/keymap.toml
@@ -96,30 +96,30 @@ keymap = [
 	# Sorting
 	{ on = [ ",", "m" ], run = [ "sort mtime --reverse=no", "linemode mtime" ], desc = "Sort by modified time" },
 	{ on = [ ",", "M" ], run = [ "sort mtime --reverse", "linemode mtime" ],    desc = "Sort by modified time (reverse)" },
-	{ on = [ ",", "c" ], run = [ "sort btime --reverse=no", "linemode btime" ],  desc = "Sort by created time" },
-	{ on = [ ",", "C" ], run = [ "sort btime --reverse", "linemode btime" ],     desc = "Sort by created time (reverse)" },
-	{ on = [ ",", "e" ], run = "sort extension --reverse=no",                      desc = "Sort by extension" },
-	{ on = [ ",", "E" ], run = "sort extension --reverse",                         desc = "Sort by extension (reverse)" },
-	{ on = [ ",", "a" ], run = "sort alphabetical --reverse=no",                   desc = "Sort alphabetically" },
-	{ on = [ ",", "A" ], run = "sort alphabetical --reverse",                      desc = "Sort alphabetically (reverse)" },
-	{ on = [ ",", "n" ], run = "sort natural --reverse=no",                        desc = "Sort naturally" },
-	{ on = [ ",", "N" ], run = "sort natural --reverse",                           desc = "Sort naturally (reverse)" },
-	{ on = [ ",", "s" ], run = [ "sort size --reverse=no", "linemode size" ],      desc = "Sort by size" },
-	{ on = [ ",", "S" ], run = [ "sort size --reverse", "linemode size" ],         desc = "Sort by size (reverse)" },
-	{ on = [ ",", "r" ], run = "sort random --reverse=no",                         desc = "Sort randomly" },
+	{ on = [ ",", "c" ], run = [ "sort btime --reverse=no", "linemode btime" ], desc = "Sort by created time" },
+	{ on = [ ",", "C" ], run = [ "sort btime --reverse", "linemode btime" ],    desc = "Sort by created time (reverse)" },
+	{ on = [ ",", "e" ], run = "sort extension --reverse=no",                   desc = "Sort by extension" },
+	{ on = [ ",", "E" ], run = "sort extension --reverse",                      desc = "Sort by extension (reverse)" },
+	{ on = [ ",", "a" ], run = "sort alphabetical --reverse=no",                desc = "Sort alphabetically" },
+	{ on = [ ",", "A" ], run = "sort alphabetical --reverse",                   desc = "Sort alphabetically (reverse)" },
+	{ on = [ ",", "n" ], run = "sort natural --reverse=no",                     desc = "Sort naturally" },
+	{ on = [ ",", "N" ], run = "sort natural --reverse",                        desc = "Sort naturally (reverse)" },
+	{ on = [ ",", "s" ], run = [ "sort size --reverse=no", "linemode size" ],   desc = "Sort by size" },
+	{ on = [ ",", "S" ], run = [ "sort size --reverse", "linemode size" ],      desc = "Sort by size (reverse)" },
+	{ on = [ ",", "r" ], run = "sort random --reverse=no",                      desc = "Sort randomly" },
 
 	# Goto
-	{ on = ["g","g"], run = "arrow top",                           desc = "Go to top" },
-	{ on = "G",       run = "arrow bot",                            desc = "Go to bottom" },
-	{ on = ["g","h"], run = "cd ~",                                      desc = "Go to Home" },
-	{ on = ["g","r"], run = "cd /",                                      desc = "Go to /" },
-	{ on = ["g","c"], run = "cd ~/.config",                              desc = "Go to ~/.config" },
-	{ on = ["g","d"], run = "cd ~/.dotfiles",                            desc = "Go to ~/.dotfiles" },
-	{ on = ["g","t"], run = "cd /tmp",                                   desc = "Go to /tmp" },
-	{ on = ["g","`"], run = "cd /home/macydnah/Documents/UnADM/2025-1-B2", desc = "Go to homework" },
-	{ on = ["g","u"], run = "cd ~/Documents/UnADM",                      desc = "Go to UnADM" },
-	{ on = ["g","a"], run = "cd $AUR",                                   desc = "Go to $AUR" },
-	{ on = ["c","d"], run = "cd --interactive",                          desc = "Go to a directory interactively" },
+	{ on = ["g","g"], run = "arrow top",                      desc = "Go to top" },
+	{ on = "G",       run = "arrow bot",                      desc = "Go to bottom" },
+	{ on = ["g","h"], run = "cd ~",                           desc = "Go to Home" },
+	{ on = ["g","r"], run = "cd /",                           desc = "Go to /" },
+	{ on = ["g","c"], run = "cd ~/.config",                   desc = "Go to ~/.config" },
+	{ on = ["g","d"], run = "cd ~/.dotfiles",                 desc = "Go to ~/.dotfiles" },
+	{ on = ["g","t"], run = "cd /tmp",                        desc = "Go to /tmp" },
+	{ on = ["g","`"], run = "cd ~/Documents/UnADM/2025-2-B1", desc = "Go to homework" },
+	{ on = ["g","u"], run = "cd ~/Documents/UnADM",           desc = "Go to UnADM" },
+	{ on = ["g","a"], run = "cd $AUR",                        desc = "Go to $AUR" },
+	{ on = ["c","d"], run = "cd --interactive",               desc = "Go to a directory interactively" },
 
 	# Tabs
 	{ on = "<C-t>", run = "tab_create --current", desc = "Create a new tab with CWD" },
