refactor(mpv): add subtitles configs

--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -2,12 +2,17 @@
 #vo=gpu-next
 hwdec=auto-safe
 ytdl
-slang=es,en,en-GB
+slang=es-MX,es,en,en-GB
 save-position-on-quit
 no-audio-display
 pulse-latency-hacks=yes
 sub-font='SF Pro Text'
 osd-font='SF Pro Text'
+#audio-channels=7.1,5.1,stereo
+audio-channels=stereo
+
+sub-auto=all
+sub-file-paths=subtitles:subtítulos:sub:subs:Subs
 
 [svp]
 input-ipc-server=/tmp/mpvsocket     # Receives input from SVP
