refactor(tmux): add statusbar spaghetti code

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -42,15 +42,15 @@ bind-key -N "Reload tmux config"                    -Tprefix R {
 	display "Config reloaded!"
 }
 # split panes
-bind-key -N "Create a new pane (horizontal split)"  -Tprefix % split-window -h
-bind-key -N "Create a new pane (vertical split)"    -Tprefix '"' split-window -v
+bind-key -N "Create a new pane (horizontal split)"  -Troot C-Enter split-window -h
+bind-key -N "Create a new pane (vertical split)"    -Troot C-M-Enter split-window -v
 
 # Copy mode bindings
 bind-key -N "Begin selection"    -Tcopy-mode-vi v send-keys -X begin-selection
 bind-key -N "Yank the selection" -Tcopy-mode-vi y send-keys -X copy-pipe 'wl-copy -n'
 bind-key -N "Yank entire line"   -Tcopy-mode-vi Y send-keys -X copy-pipe-line 'wl-copy -n'
 
-# submap: Resize mode bindings
+# Resize mode bindings
 set-option -g repeat-time 500
 bind-key -r -N "Resize the pane up"         -Tresize k resize-pane -U 5
 bind-key -r -N "Resize the pane down"       -Tresize j resize-pane -D 5
@@ -114,14 +114,14 @@ set-option -g set-titles-string "#{user}@#h: #W"
 set-option -g status on
 set-option -g status-position bottom
 set-option -g status-interval 60
-set-option -g status-justify absolute-centre
+set-option -g status-justify 'left'
 set-option -g status-keys 'emacs'
 set-option -g status-style 'fg=black'
 set-option -ag status-style 'bg=green'
 set-option -g status-left '[#S] '
 set-option -g status-left-length 10
 set-option -g status-left-style 'fg=black bg=green'
-set-option -g status-right '│ #h │ %d-%b-%Y  %H:%M '
+set-option -g status-right '│ %H:%M %d-%b-%Y '
 set-option -g status-right-length 50
 set-option -g status-right-style 'fg=black, bg=green'
 # don't do anything when a "bell" rings
@@ -135,7 +135,8 @@ set-option -wg automatic-rename on
 set-option -wg automatic-rename-format "#{?pane_in_mode,[tmux],#{pane_current_command}}#{?pane_dead,[dead],}"
 set-option -wg clock-mode-colour 'green'
 set-option -wg clock-mode-style '24'
-set-option -wg fill-character '─'
+# set-option -wg fill-character '─'
+set-option -wg fill-character '.'
 set-option -wg main-pane-height 24
 set-option -wg main-pane-width 80
 set-option -wg copy-mode-match-style 'fg=black, bg=cyan'
@@ -152,7 +153,16 @@ set-option -wg other-pane-width 0
 set-option -wg pane-active-border-style 'fg=green'
 set-option -wg pane-base-index 1
 # set-option -wg pane-border-format '#{?pane_active,#[reverse],}#{pane_index}#[default] \"#{pane_title}\"'
-set-option -wg pane-border-format "#{?pane_active,#[reverse]#[bold],}#{pane_index}#[default] #{client_user}@#h #{pane_current_path}"
+# set-option -wg pane-border-format "#{?pane_active,#[reverse]#[bold],}#{pane_index}#[default] #{client_user}@#h #{pane_current_path}"
+set -g pane-border-format "#{?pane_active,\
+╡#[fg=#3c3836 bg=#fe8019 bold]  #{pane_index}  #{pane_current_path}  #[fg=green bg=default]╞,\
+╡#[fg=#fe8019 bg=default]#{pane_index} #{pane_current_path}#[fg=default]╞}"
+set -g pane-border-format "\
+#{?pane_active,\
+	╡#[fg=black bg=green bold] #{pane_current_path} #[fg=green bg=default]╞\
+,\
+	╡#[fg=grey bg=default]#{pane_current_path}#[fg=default]╞\
+}"
 set-option -wg pane-border-indicators 'colour'
 set-option -wg pane-border-lines 'single'
 set-option -wg pane-border-status 'top'
@@ -195,3 +205,52 @@ set-option -wg scroll-on-clear on
 set-option -wg synchronize-panes off
 set-option -wg window-active-style 'default'
 set-option -wg window-style 'default'
+
+### STATUS BAR ###
+set -g status-style "bg=#3c3836,fg=#a89984"
+set -g status-style "bg=green,fg=black"
+set -g status-left "#[bg=#fb4934,fg=#3c3836]   #{session_name} \
+#[bg=#fe8019,fg=#fb4934]\
+#[bg=#fe8019,fg=#282828]#{?client_prefix, PREFIX ,}\
+#[bg=#504945,fg=#fe8019]"
+set -g status-left ""
+set -g status-left-length 500
+
+set -g window-status-format "#[bg=#504945] #{window_index}-#{window_name} \
+#{?#{==:#{window_index},#{last_window_index}},#[bg=#3c3836 fg=#504945],}"
+set -g window-status-format "\
+#[bg=brightgreen] #{window_index}:#{window_name} \
+#{?#{==:#{window_index},#{last_window_index}},\
+	#[bg=green fg=brightgreen]\
+,\
+}"
+
+set -g window-status-current-format "#[bg=#a89984,fg=#504945]\
+#[fg=#282828] #{window_index}-#{window_name} \
+#[bg=#504945,fg=#a89984]#{?#{==:#{window_index},#{last_window_index}},#[bg=#3c3836],}"
+set -g window-status-current-format "\
+#[bg=brightgreen fg=yellow]\
+#[bg=green fg=brightgreen]\
+#[bg=green fg=black] #{window_index}: #{window_name} \
+#{?#{==:#{window_index},#{last_window_index}},\
+	│\
+,\
+	#[bg=brightgreen fg=green]\
+}"
+
+set -g window-status-separator ""
+
+set -g status-right "#[fg=#504945]#[bg=#504945,fg=#a89984] #(whoami)  \
+#[bg=#a89984,fg=#282828] #{host_short}   \
+#[bg=#a89984,fg=#fe8019]\
+#[bg=#fe8019,fg=#3c3836] #(date +%a-%b-%d) #[fg=#fb4934]\
+#[bg=#fb4934,fg=#3c3836] #(date +%H:%M) "
+set -g status-right "\
+#[fg=brightgreen]\
+#[bg=brightgreen,fg=black] %d-%b-%Y #[fg=green]\
+#[bg=green,fg=black] %I:%M %p \
+#[fg=brightgreen]\
+#[bg=brightgreen fg=yellow]\
+"
+set -g status-right-length 500
+set -g status-interval 1
