refactor(tmux): clean up statusbar configs

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -152,14 +152,9 @@ set-option -wg other-pane-width 0
 # panes
 set-option -wg pane-active-border-style 'fg=green'
 set-option -wg pane-base-index 1
-# set-option -wg pane-border-format '#{?pane_active,#[reverse],}#{pane_index}#[default] \"#{pane_title}\"'
-# set-option -wg pane-border-format "#{?pane_active,#[reverse]#[bold],}#{pane_index}#[default] #{client_user}@#h #{pane_current_path}"
-set -g pane-border-format "#{?pane_active,\
-╡#[fg=#3c3836 bg=#fe8019 bold]  #{pane_index}  #{pane_current_path}  #[fg=green bg=default]╞,\
-╡#[fg=#fe8019 bg=default]#{pane_index} #{pane_current_path}#[fg=default]╞}"
 set -g pane-border-format "\
 #{?pane_active,\
-	╡#[fg=black bg=green bold] #{pane_current_path} #[fg=green bg=default]╞\
+	╡#[reverse bold] #{pane_current_path} #[default fg=green bg=default]╞\
 ,\
 	╡#[fg=grey bg=default]#{pane_current_path}#[fg=default]╞\
 }"
@@ -173,20 +168,15 @@ set-option -wg popup-border-style 'fg=brightgreen'
 set-option -wg popup-border-lines 'rounded'
 # window status
 set-option -wg window-status-activity-style 'default'
-set-option -wg window-status-bell-style 'fg=yellow, bg=red'
+set-option -wg window-status-bell-style 'fg=yellow bg=red'
 set-option -wg window-status-current-format "#I:#W#{?window_flags,#{window_flags}, }"
-set-option -wg window-status-current-style 'fg=black, bg=brightgreen'
+set-option -wg window-status-current-style 'fg=black bg=brightgreen'
 set-option -wg window-status-format "#I:#W#{?window_flags,#{window_flags}, }"
 set-option -wg window-status-last-style 'default'
 set-option -wg window-status-separator ' '
 set-option -wg window-status-style 'default'
 set-option -wg window-size 'latest'
 set-option -wg wrap-search on
-
-# set-option -wg window-status-current-format ' #I #W #F '
-# set-option -wg window-status-current-style 'fg=black bg=red'
-# set-option -wg window-status-format ' #I #[fg=white]#W #[fg=yellow]#F '
-# set-option -wg window-status-style 'fg=red bg=black'
 
 # Pane options
 # inherit from window options. This means any pane option may be set
@@ -207,17 +197,13 @@ set-option -wg window-active-style 'default'
 set-option -wg window-style 'default'
 
 ### STATUS BAR ###
-set -g status-style "bg=#3c3836,fg=#a89984"
-set -g status-style "bg=green,fg=black"
-set -g status-left "#[bg=#fb4934,fg=#3c3836]   #{session_name} \
-#[bg=#fe8019,fg=#fb4934]\
-#[bg=#fe8019,fg=#282828]#{?client_prefix, PREFIX ,}\
-#[bg=#504945,fg=#fe8019]"
-set -g status-left ""
-set -g status-left-length 500
+set -g status-interval 60
+set -g status-style "bg=green fg=black"
 
-set -g window-status-format "#[bg=#504945] #{window_index}-#{window_name} \
-#{?#{==:#{window_index},#{last_window_index}},#[bg=#3c3836 fg=#504945],}"
+set -g status-left ""
+set -g status-left-length 0
+
+set -g window-status-separator ''
 set -g window-status-format "\
 #[bg=brightgreen] #{window_index}:#{window_name} \
 #{?#{==:#{window_index},#{last_window_index}},\
@@ -225,9 +211,6 @@ set -g window-status-format "\
 ,\
 }"
 
-set -g window-status-current-format "#[bg=#a89984,fg=#504945]\
-#[fg=#282828] #{window_index}-#{window_name} \
-#[bg=#504945,fg=#a89984]#{?#{==:#{window_index},#{last_window_index}},#[bg=#3c3836],}"
 set -g window-status-current-format "\
 #[bg=brightgreen fg=yellow]\
 #[bg=green fg=brightgreen]\
@@ -238,19 +221,15 @@ set -g window-status-current-format "\
 	#[bg=brightgreen fg=green]\
 }"
 
-set -g window-status-separator ""
-
-set -g status-right "#[fg=#504945]#[bg=#504945,fg=#a89984] #(whoami)  \
-#[bg=#a89984,fg=#282828] #{host_short}   \
-#[bg=#a89984,fg=#fe8019]\
-#[bg=#fe8019,fg=#3c3836] #(date +%a-%b-%d) #[fg=#fb4934]\
-#[bg=#fb4934,fg=#3c3836] #(date +%H:%M) "
 set -g status-right "\
 #[fg=brightgreen]\
-#[bg=brightgreen,fg=black] %d-%b-%Y #[fg=green]\
-#[bg=green,fg=black] %I:%M %p \
+#[bg=brightgreen fg=black]#{?client_prefix, PREFIX ,}\
+#[bg=brightgreen fg=yellow]\
+#[bg=yellow fg=black]   #{session_name} \
+#[fg=brightgreen]\
+#[bg=brightgreen fg=black] %d-%b-%Y #[fg=green]\
+#[bg=green fg=black] %I:%M %p \
 #[fg=brightgreen]\
 #[bg=brightgreen fg=yellow]\
 "
 set -g status-right-length 500
-set -g status-interval 1
