refactor(tmux): `FORMAT` value style

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -77,8 +77,8 @@ set-option -s escape-time 10
 set-option -s editor 'nvim'
 set-option -s exit-empty on
 set-option -s exit-unattached off
-# set-option -s extended-keys off
-# set-option -s extended-keys-format 'xterm'
+set-option -s extended-keys off
+set-option -s extended-keys-format 'xterm'
 set-option -s focus-events on
 set-option -s history-file ''
 set-option -s set-clipboard external
@@ -132,7 +132,10 @@ set-option -g visual-silence off
 # Window options
 set-option -wg aggressive-resize on
 set-option -wg automatic-rename on
-set-option -wg automatic-rename-format "#{?pane_in_mode,[tmux],#{pane_current_command}}#{?pane_dead,[dead],}"
+set-option -wg automatic-rename-format "\
+#{?pane_in_mode,[tmux],#{pane_current_command}}\
+#{?pane_dead,[dead],}\
+"
 set-option -wg clock-mode-colour 'green'
 set-option -wg clock-mode-style '24'
 # set-option -wg fill-character '─'
@@ -156,7 +159,7 @@ set -g pane-border-format "\
 #{?pane_active,\
 	╡#[reverse bold] #{pane_current_path} #[default fg=green bg=default]╞\
 ,\
-	╡#[fg=grey bg=default]#{pane_current_path}#[fg=default]╞\
+	#[fg=grey bg=default]#{pane_current_path}#[fg=default]\
 }"
 set-option -wg pane-border-indicators 'colour'
 set-option -wg pane-border-lines 'single'
