refactor(tmux): rename tmux sessions in the environment
- Rename `shession` to `Scratchpad` for the tmux session used in
  Hyprland special workspace

- Rename `shession` to `Shession` in the environment set by `bash`

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -3,7 +3,7 @@
 # https://wiki.hyprland.org/Configuring/Keywords/
 $mod = SUPER
 $terminal = footclient
-$floatingTerminal = $terminal -a floating-foot -e tmux new-session -A -s shession
+$floatingTerminal = $terminal -a floating-foot -e tmux new-session -A -s Scratchpad
 $fileManager = $terminal -a Yazi --title "🗂  File Manager" bash -c "env YAZI_LOG=debug yazi"
 $menu = ~/.config/rofi/launcher.sh
 $bar = togglewaybar.sh
@@ -392,6 +392,7 @@ windowrulev2 = float,class:^(floating-foot)$
 windowrulev2 = pseudo,class:^(floating-foot)$
 windowrulev2 = tile,class:^(floating-foot)$
 windowrulev2 = noshadow 1,class:^(floating-foot)$
+windowrulev2 = noborder 1,class:^(floating-foot)$
 
 # mpv
 windowrulev2 = noblur 1,class:^(mpv)$
