refactor(tmux): `pane-border-format` to single line

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -157,7 +157,7 @@ set-option -wg pane-active-border-style 'fg=green'
 set-option -wg pane-base-index 1
 set -g pane-border-format "\
 #{?pane_active,\
-	╡#[reverse bold] #{pane_current_path} #[default fg=green bg=default]╞\
+	┤#[reverse bold] #{pane_current_path} #[default fg=green bg=default]├\
 ,\
 	#[fg=grey bg=default]#{pane_current_path}#[fg=default]\
 }"
