--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -18,6 +18,10 @@ bind-key -N "Select the pane below the active pane"             -Troot C-j selec
 bind-key -N "Select the pane above the active pane"             -Troot C-k select-pane -U
 bind-key -N "Select the pane to the right of the active pane"   -Troot C-l select-pane -R
 bind-key -N "Workaround to clear the screen with PREFIX,Ctrl+l" -Tprefix C-l send-keys
+bind-key -N "Move the current pane to the left"                 -Troot C-M-h swap-pane -d -t '{left-of}'
+bind-key -N "Move the current pane down"                        -Troot C-M-j swap-pane -d -t '{down-of}'
+bind-key -N "Move the current pane up"                          -Troot C-M-k swap-pane -d -t '{up-of}'
+bind-key -N "Move the current pane to the right"                -Troot C-M-l swap-pane -d -t '{right-of}'
 
 # General bindings
 bind-key -N "Break current pane to it's own window" -Tprefix ! break-pane
@@ -27,8 +31,8 @@ bind-key -N "Display window menu"                   -Tprefix < display-menu -T "
 bind-key -N "Display pane menu"                     -Tprefix > display-menu -T "#[align=centre]#{pane_index} (#{pane_id})" -x P -y P "#{?#{m/r:(copy|view)-mode,#{pane_mode}},Go To Top,}" < { send-keys -X history-top } "#{?#{m/r:(copy|view)-mode,#{pane_mode}},Go To Bottom,}" > { send-keys -X history-bottom } '' "#{?mouse_word,Search For #[underscore]#{=/9/...:mouse_word},}" C-r { if-shell -F "#{?#{m/r:(copy|view)-mode,#{pane_mode}},0,1}" "copy-mode -t=" ; send-keys -X -t = search-backward "#{q:mouse_word}" } "#{?mouse_word,Type #[underscore]#{=/9/...:mouse_word},}" C-y { copy-mode -q ; send-keys -l "#{q:mouse_word}" } "#{?mouse_word,Copy #[underscore]#{=/9/...:mouse_word},}" c { copy-mode -q ; set-buffer "#{q:mouse_word}" } "#{?mouse_line,Copy Line,}" l { copy-mode -q ; set-buffer "#{q:mouse_line}" } '' "#{?mouse_hyperlink,Type #[underscore]#{=/9/...:mouse_hyperlink},}" C-h { copy-mode -q ; send-keys -l "#{q:mouse_hyperlink}" } "#{?mouse_hyperlink,Copy #[underscore]#{=/9/...:mouse_hyperlink},}" h { copy-mode -q ; set-buffer "#{q:mouse_hyperlink}" } '' "Horizontal Split" h { split-window -h } "Vertical Split" v { split-window -v } '' "#{?#{>:#{window_panes},1},,-}Swap Up" u { swap-pane -U } "#{?#{>:#{window_panes},1},,-}Swap Down" d { swap-pane -D } "#{?pane_marked_set,,-}Swap Marked" s { swap-pane } '' Kill X { kill-pane } Respawn R { respawn-pane -k } "#{?pane_marked,Unmark,Mark}" m { select-pane -m } "#{?#{>:#{window_panes},1},,-}#{?window_zoomed_flag,Unzoom,Zoom}" z { resize-pane -Z }
 bind-key -N "List key bindings"                     -Tprefix ? list-keys
 bind-key -N "Enter copy mode"                       -Tprefix [ copy-mode -e
-bind-key -N "Enter copy mode and scroll up"         -Troot C-M-k copy-mode -eu
-bind-key -N "Enter copy mode and scroll down"       -Troot C-M-j copy-mode -ed
+# bind-key -N "Enter copy mode and scroll up"         -Troot C-M-k copy-mode -eu
+# bind-key -N "Enter copy mode and scroll down"       -Troot C-M-j copy-mode -ed
 bind-key -N "Paste the most recent paste buffer"    -Tprefix ] paste-buffer -p
 bind-key -N "Toggle the status bar visibility"      -Tprefix b set-option status
 bind-key -N "Create a new window"                   -Tprefix c new-window
