refactor(tmux): `key_table` notifications in status

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -230,7 +230,8 @@ set -g window-status-current-format "\
 
 set -g status-right "\
 #[fg=brightgreen]\
-#[bg=brightgreen fg=black]#{?client_prefix, PREFIX ,}\
+#[bg=brightgreen fg=black]#{?#{==:#{client_key_table},prefix}, PREFIX ,}\
+#[bg=brightgreen fg=black]#{?#{==:#{client_key_table},resize}, RESIZE ,}\
 #[bg=brightgreen fg=yellow]\
 #[bg=yellow fg=black]   #{session_name} \
 #[fg=brightgreen]\
