fix(tmux): specify `send-keys` argument
The syntactic sugar for the `send-keys` tmux empty arguments, seems to
not work in older tmux versions

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -17,7 +17,7 @@ bind-key -N "Select the pane to the left of the active pane"    -Troot C-h selec
 bind-key -N "Select the pane below the active pane"             -Troot C-j select-pane -D
 bind-key -N "Select the pane above the active pane"             -Troot C-k select-pane -U
 bind-key -N "Select the pane to the right of the active pane"   -Troot C-l select-pane -R
-bind-key -N "Workaround to clear the screen with PREFIX,Ctrl+l" -Tprefix C-l send-keys
+bind-key -N "Workaround to clear the screen with PREFIX,Ctrl+l" -Tprefix C-l send-keys C-l
 bind-key -N "Move the current pane to the left"                 -Troot C-M-h swap-pane -d -t '{left-of}'
 bind-key -N "Move the current pane down"                        -Troot C-M-j swap-pane -d -t '{down-of}'
 bind-key -N "Move the current pane up"                          -Troot C-M-k swap-pane -d -t '{up-of}'
@@ -33,6 +33,8 @@ bind-key -N "List key bindings"                     -Tprefix ? list-keys
 bind-key -N "Enter copy mode"                       -Tprefix [ copy-mode -e
 # bind-key -N "Enter copy mode and scroll up"         -Troot C-M-k copy-mode -eu
 # bind-key -N "Enter copy mode and scroll down"       -Troot C-M-j copy-mode -ed
+bind-key -N "Enter copy mode and scroll down"       -Tprefix j copy-mode -ed
+bind-key -N "Enter copy mode and scroll up"         -Tprefix k copy-mode -eu
 bind-key -N "Paste the most recent paste buffer"    -Tprefix ] paste-buffer -p
 bind-key -N "Toggle the status bar visibility"      -Tprefix b set-option status
 bind-key -N "Create a new window"                   -Tprefix c new-window
