--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -95,7 +95,7 @@ set-option -g assume-paste-time 1
 set-option -g base-index 1
 set-option -g bell-action 'any'
 set-option -g default-command ''
-set-option -g default-shell '/bin/sh'
+set-option -g default-shell '/bin/bash'
 set-option -g default-size '80x24'
 set-option -g destroy-unattached off
 set-option -g detach-on-destroy on
@@ -169,7 +169,7 @@ set -g pane-border-format "\
 }"
 set-option -wg pane-border-indicators 'colour'
 set-option -wg pane-border-lines 'single'
-set-option -wg pane-border-status 'top'
+set-option -wg pane-border-status 'off'
 set-option -wg pane-border-style 'fg=gray'
 # popups
 set-option -wg popup-style 'default'
