feat(foot): enable 24-bit truecolor support

--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -1,5 +1,7 @@
 # ~/.config/foot/foot.ini
 
+term=foot-direct
+
 font=SF Mono:pixelsize=16:antialias=true:style=semibold, Twemoji:pixelsize=16, Symbols Nerd Font:pixelsize=16:antialias=true
 letter-spacing=0px
 horizontal-letter-offset=0px
