refactor(tmux): `$SHELL` as `default-shell`
- Add `terminal-overrides` for better `TERM` support

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -78,7 +78,7 @@ set-environment -g 'IGNOREEOF' 1
 set-option -s backspace C-?
 set-option -s buffer-limit 50
 set-option -s copy-command 'wl-copy -n'
-set-option -s default-terminal 'screen-256color'
+set-option -s default-terminal 'tmux'
 set-option -s escape-time 10
 set-option -s editor 'nvim'
 set-option -s exit-empty on
@@ -88,6 +88,8 @@ set-option -s extended-keys-format 'xterm'
 set-option -s focus-events on
 set-option -s history-file ''
 set-option -s set-clipboard external
+# https://gist.github.com/andersevenrud/015e61af2fd264371032763d4ed965b6#tmux
+set-option -as terminal-overrides ",$TERM:RGB"
 
 # Session options
 set-option -g activity-action 'any'
@@ -95,7 +97,7 @@ set-option -g assume-paste-time 1
 set-option -g base-index 1
 set-option -g bell-action 'any'
 set-option -g default-command ''
-set-option -g default-shell '/bin/bash'
+set-option -g default-shell "$SHELL"
 set-option -g default-size '80x24'
 set-option -g destroy-unattached off
 set-option -g detach-on-destroy on
