refactor(tmux): enable 256 color palette by default

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -78,7 +78,7 @@ set-environment -g 'IGNOREEOF' 1
 set-option -s backspace C-?
 set-option -s buffer-limit 50
 set-option -s copy-command 'wl-copy -n'
-set-option -s default-terminal 'tmux'
+set-option -s default-terminal 'tmux-256color'
 set-option -s escape-time 10
 set-option -s editor 'nvim'
 set-option -s exit-empty on
