--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -207,6 +207,12 @@ set-option -wg synchronize-panes off
 set-option -wg window-active-style 'default'
 set-option -wg window-style 'default'
 
+# enable Yazi's image preview to work correctly in tmux
+# https://yazi-rs.github.io/docs/image-preview/#tmux
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+
 ### STATUS BAR ###
 set -g status-interval 60
 set -g status-style "bg=green fg=black"
