fix(foot): revert `foot-direct` 24-bit color
- Change `term=foot-direct` to `term=foot` as the former breaks remote
  `vim` colors

--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -1,6 +1,6 @@
 # ~/.config/foot/foot.ini
 
-term=foot-direct
+term=foot
 
 font=SF Mono:pixelsize=16:antialias=true:style=semibold, Twemoji:pixelsize=16, Symbols Nerd Font:pixelsize=16:antialias=true
 letter-spacing=0px
