--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -171,7 +171,7 @@ set -g pane-border-format "\
 }"
 set-option -wg pane-border-indicators 'colour'
 set-option -wg pane-border-lines 'single'
-set-option -wg pane-border-status 'off'
+set-option -wg pane-border-status 'top'
 set-option -wg pane-border-style 'fg=gray'
 # popups
 set-option -wg popup-style 'default'
@@ -240,9 +240,12 @@ set -g window-status-current-format "\
 
 set -g status-right "\
 #[fg=brightgreen]\
+#[bg=brightgreen fg=yellow]\
 #[bg=brightgreen fg=black]#{?#{==:#{client_key_table},prefix}, PREFIX ,}\
 #[bg=brightgreen fg=black]#{?#{==:#{client_key_table},resize}, RESIZE ,}\
-#[bg=brightgreen fg=yellow]\
+#[fg=green]\
+#[bg=green fg=black]#{?window_zoomed_flag, ZOOMED ,}\
+#[bg=green fg=yellow]\
 #[bg=yellow fg=black]   #{session_name} \
 #[fg=brightgreen]\
 #[bg=brightgreen fg=black] %d-%b-%Y #[fg=green]\
