refactor(tmux): `pane-border-status` off

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -171,7 +171,7 @@ set -g pane-border-format "\
 }"
 set-option -wg pane-border-indicators 'colour'
 set-option -wg pane-border-lines 'single'
-set-option -wg pane-border-status 'top'
+set-option -wg pane-border-status 'off'
 set-option -wg pane-border-style 'fg=gray'
 # popups
 set-option -wg popup-style 'default'
