feat(foot): define font styles

--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -1,39 +1,101 @@
 # ~/.config/foot/foot.ini
 
+[main]
+# shell=
+login-shell=no
 term=foot
 
-font=SF Mono:pixelsize=16:antialias=true:style=semibold, Twemoji:pixelsize=16, Symbols Nerd Font:pixelsize=16:antialias=true
+font=SF Mono:pixelsize=16:antialias=true:style=Regular, Twemoji:pixelsize=16, Symbols Nerd Font:pixelsize=16:antialias=true
+font-bold=SF Mono:pixelsize=16:antialias=true:style=Semibold
+font-italic=SF Mono:pixelsize=16:antialias=true:style=Light Italic
+font-bold-italic=SF Mono:pixelsize=16:antialias=true:style=Bold Italic
+
+font-size-adjustment=1px
+
+line-height=20px
 letter-spacing=0px
 horizontal-letter-offset=0px
 vertical-letter-offset=0px
 underline-offset=0px
 underline-thickness=2px
+strikeout-thickness=2px
+
+gamma-correct-blending=yes
+box-drawings-uses-font-glyphs=yes
+
 dpi-aware=no
 pad=1x1
 
+resize-delay-ms=100
+resize-by-cells=yes
+resize-keep-grid=yes
+
+initial-color-theme=1
+initial-window-size-pixels=700x500
+initial-window-mode=windowed
+
+title=foot
+locked-title=no
+# app-id=
+
+bold-text-in-bright=no
+word-delimiters=,│‘|:"'()[]{}<>
+selection-target=clipboard
+
+[environment]
+# name=value
+
+[security]
+osc52=disabled
+
+[bell]
+system=no
+urgent=no
+notify=no
+visual=no
+command=none
+command-focused=no
+
+[desktop-notifications]
+inhibit-when-focused=yes
+
 [scrollback]
 lines=2000
-indicator-position=none
+multiplier=3.0
+indicator-position=relative
+indicator-format=percentage
+
+[url]
+launch=xdg-open ${url}
+osc8-underline=always
+label-letters=sadfjklewcmpgh.
+
+[regex]
 
 [cursor]
 style=underline
 unfocused-style=hollow
 blink=yes
 blink-rate=500
-color=040404 76b539
 beam-thickness=2px
 underline-thickness=2px
 
 [mouse]
 hide-when-typing=yes
+alternate-scroll-mode=yes
+
+[touch]
 
 [colors]
-alpha=0.93
-#foreground=ebebeb
-foreground=f0f0f0
-#background=0f0f0f
-background=040404
+alpha=0.95
+alpha-mode=all
 
+foreground=f0f0f0
+background=000000
+
+cursor=040404 76b539
+
+## Normal/regular colors (color palette 0-7)
 regular0=171717  # black
 regular1=d81765  # red
 regular2=97d01a  # green
@@ -43,6 +105,7 @@ regular5=ff2491  # magenta
 regular6=0fdcb6  # cyan
 regular7=ebebeb  # white
 
+## Bright colors (color palette 8-15)
 bright0=801943   # bright black
 bright1=ff0000   # bright red
 bright2=76b639   # bright green
@@ -52,25 +115,75 @@ bright5=ff2491   # bright magenta
 bright6=0a9b81   # bright cyan
 bright7=f8f8f8   # bright white
 
+## Misc colors
+jump-labels=          171717 ffa800  # regular0 regular3 # black yellow
+scrollback-indicator= 171717 289cd5  # regular0 bright4  # black brightblue
+search-box-no-match=  171717 d81765  # regular0 regular1 # black red
+search-box-match=     171717 ffa800  # regular0 regular3 # black yellow
+urls=                 ffa800         # regular3 # yellow
+flash=                ffa800         # regular3 # yellow
+flash-alpha=0.1
+
+[colors2]
+
+[csd]
+preferred=none
+size=26
+color=f0f0f0  # foreground color
+font=SF Mono:antialias=true:style=Semibold
+hide-when-maximized=no
+double-click-to-maximize=yes
+border-width=4
+border-color=fff0f0f0  # csd.color
+button-width=26
+button-color=ff040404           # background color
+button-minimize-color=ff16b1fb  # regular4 # blue
+button-maximize-color=ff97d01a  # regular2 # green
+button-close-color=ffd81765     # regular1 # red
+
 [key-bindings]
 scrollback-up-page=Mod1+Shift+k
+scrollback-up-half-page=none
 scrollback-up-line=Mod1+k
 scrollback-down-page=Mod1+Shift+j
+scrollback-down-half-page=none
 scrollback-down-line=Mod1+j
+scrollback-home=Shift+Home
+scrollback-end=Shift+End
+
 clipboard-copy=Mod1+c
 clipboard-paste=Mod1+v
 primary-paste=none
+
 search-start=Control+Shift+r
+
 font-increase=Control+equal
 font-decrease=Control+minus
 font-reset=Control+0
+
 spawn-terminal=Mod4+Control+Return
+
+minimize=none
+maximize=none
+fullscreen=none
+
 show-urls-launch=Mod1+l
+show-urls-persistent=none
 show-urls-copy=Mod1+y
+
+regex-launch=none
+regex-copy=none
+
 prompt-prev=none
 prompt-next=none
+
 unicode-input=Control+Shift+u
-#quit=Control+q
+
+color-theme-switch-1=none
+color-theme-switch-2=none
+color-theme-toggle=none
+
+# quit=Control+q
 
 [search-bindings]
 cancel=Control+bracketleft Escape
@@ -102,3 +215,6 @@ font-decrease=none
 [tweak]
 render-timer=none
 font-monospace-warn=no
+dim-amount=1.5
+bold-text-in-bright-amount=1.1
+surface-bit-depth=8-bit
